# cookiecutter-python-component

./: .gitignore  AGENTS.md  Makefile  README.md  TEMPLATE_README.md  cookiecutter.json  pyproject.toml
component-test-mv-component/: AGENTS.md  README.md  pyproject.toml
component-test-mv-component/component_config/: component_long_description.md  component_short_description.md  documentationUrl.md  licenseUrl.md
component-test-mv-component/scripts/: build_n_test.sh
component-test-mv-component/src/: component.py
hooks/: post_gen_project.py  pre_gen_project.py  venv_setup.sh
{{cookiecutter.repository_folder_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bitbucket-pipelines.yml  deploy.sh  docker-compose.yml  flake8.cfg  pyproject.toml  requirements.txt
{{cookiecutter.repository_folder_name}}/.github/workflows/: push-matrix.yml  push-monorepo.yml  push.matrix.yml.example  push.monorepo.yml.example  push.yml
{{cookiecutter.repository_folder_name}}/component_config/: component_long_description.md  component_short_description.md
{{cookiecutter.repository_folder_name}}/data/: config.json
{{cookiecutter.repository_folder_name}}/docs/: CODE_EXAMPLES.md  JSON_SCHEMA_UI_ELEMENTS.md  json_schema_blocks.json
{{cookiecutter.repository_folder_name}}/scripts/: update_dev_portal_properties.sh
{{cookiecutter.repository_folder_name}}/src/: component.py  configuration.py
{{cookiecutter.repository_folder_name}}/tests/: __init__.py
{{cookiecutter.repository_folder_name}}/tmp/: deploy_action  lint_action  push_tag_action  run_test_action
(+2 files in other folders)
